<resources>
    <string name="app_name">Помощник водителя</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Штрафы ГИБДД</string>
    <string name="menu_gallery">Осаго</string>
    <string name="menu_slideshow">Автомобили</string>
    <string name="menu_tools">Водители</string>
    <string name="menu_share">Учетная запись</string>
    <string name="menu_send">Уведомления</string>

    <string name="URL">https://mapi.driver-helper.ru/v1.0/</string>
</resources>
