<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home2">

    <fragment
        android:id="@+id/nav_home2"
        android:name="com.example.pdd.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.pdd.ui.Osago.OsagoFrag"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_osago" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.pdd.ui.Autos.AutosFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_autos" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.pdd.ui.driver.driverFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_Driver" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.pdd.ui.cabinet.ShareCabinet"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_cabinet" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.pdd.ui.push.PushFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_push" />
</navigation>